--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mysql": "^2.18.1",
+    "rsa-pem-from-mod-exp": "^0.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
